Newer tmuxes perma-set utf8 on

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,7 @@
 # Use UTF-8
-set -g utf8 on
-set-window-option -g utf8 on
-set-option -g status-utf8 on
+set -qg utf8 on
+set-window-option -qg utf8 on
+set-option -qg status-utf8 on
 
 # Make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
