--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -31,4 +31,4 @@ set -g status-fg white
 set -g status-left '#[fg=green]#H'
 
 # Highlight active window
-set-window-option -g window-status-current-bg colour164
+set-window-option -g window-status-current-style bg=colour164
