--- a/home/.config/k9s/plugin.yml
+++ b/home/.config/k9s/plugin.yml
@@ -13,7 +13,7 @@ plugin:
     background: false
     args:
       - -c
-      - "flux --context $CONTEXT $([ $(kubectl --context $CONTEXT get helmreleases -n $NAMESPACE $NAME -o=custom-columns=TYPE:.spec.suspend | tail -1) = \"true\" ] && echo \"resume\" || echo \"suspend\") helmrelease -n $NAMESPACE $NAME |& less"
+      - "flux --context $CONTEXT $([ $(kubectl --context $CONTEXT get helmreleases -n $NAMESPACE $NAME -o=custom-columns=TYPE:.spec.suspend | tail -1) = \"true\" ] && echo \"resume\" || echo \"suspend\") helmrelease -n $NAMESPACE $NAME |& less -K"
   force-helmrelease:
     shortCut: Shift-Y
     confirm: true
@@ -24,7 +24,7 @@ plugin:
     background: false
     args:
       - -c
-      - "flux --context $CONTEXT suspend helmrelease -n $NAMESPACE $NAME && flux --context $CONTEXT resume helmrelease -n $NAMESPACE $NAME |& less"
+      - "flux --context $CONTEXT suspend helmrelease -n $NAMESPACE $NAME && flux --context $CONTEXT resume helmrelease -n $NAMESPACE $NAME |& less -K"
   toggle-kustomization:
     shortCut: Shift-T
     confirm: true
@@ -35,7 +35,7 @@ plugin:
     background: false
     args:
       - -c
-      - "flux --context $CONTEXT $([ $(kubectl --context $CONTEXT get kustomizations -n $NAMESPACE $NAME -o=custom-columns=TYPE:.spec.suspend | tail -1) = \"true\" ] && echo \"resume\" || echo \"suspend\") kustomization -n $NAMESPACE $NAME |& less"
+      - "flux --context $CONTEXT $([ $(kubectl --context $CONTEXT get kustomizations -n $NAMESPACE $NAME -o=custom-columns=TYPE:.spec.suspend | tail -1) = \"true\" ] && echo \"resume\" || echo \"suspend\") kustomization -n $NAMESPACE $NAME |& less -K"
   reconcile-git:
     shortCut: Shift-R
     confirm: false
@@ -46,7 +46,7 @@ plugin:
     background: false
     args:
     - -c
-    - "flux --context $CONTEXT reconcile source git -n $NAMESPACE $NAME |& less"
+    - "flux --context $CONTEXT reconcile source git -n $NAMESPACE $NAME |& less -K"
   reconcile-hr:
     shortCut: Shift-R
     confirm: false
@@ -57,7 +57,7 @@ plugin:
     background: false
     args:
     - -c
-    - "flux --context $CONTEXT reconcile helmrelease -n $NAMESPACE $NAME |& less"
+    - "flux --context $CONTEXT reconcile helmrelease -n $NAMESPACE $NAME |& less -K"
   reconcile-ks:
     shortCut: Shift-R
     confirm: false
@@ -68,7 +68,7 @@ plugin:
     background: false
     args:
     - -c
-    - "flux --context $CONTEXT reconcile kustomization -n $NAMESPACE $NAME |& less"
+    - "flux --context $CONTEXT reconcile kustomization -n $NAMESPACE $NAME |& less -K"
   trace:
     shortCut: Shift-A
     confirm: false
@@ -79,4 +79,4 @@ plugin:
     background: false
     args:
     - -c
-    - "flux --context $CONTEXT trace --kind `echo $RESOURCE_NAME | sed -E 's/ies$/y/' | sed -E 's/ses$/se/' | sed -E 's/(s|es)$//g'` --api-version $RESOURCE_GROUP/$RESOURCE_VERSION --namespace $NAMESPACE $NAME |& less"
+    - "flux --context $CONTEXT trace --kind `echo $RESOURCE_NAME | sed -E 's/ies$/y/' | sed -E 's/ses$/se/' | sed -E 's/(s|es)$//g'` --api-version $RESOURCE_GROUP/$RESOURCE_VERSION --namespace $NAMESPACE $NAME |& less -K"
